# toycoin

./: .gitignore  README.md  pyproject.toml
tests/: test_field_element.py
toycoin/: __main__.py  ecc.py
