[tool.poetry]
name = "toycoin"
version = "0.1.0"
description = ""
authors = ["Toshinori Takahashi <dr.t.takahashi.0917@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
pylint = "^2.15.3"
isort = "^5.10.1"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
